--- a/index.html
+++ b/index.html
@@ -7,18 +7,36 @@
 
     <title>HZC | Home</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap"
+    />
 
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/estilos.css" />
   </head>
   <body>
     <header class="cabecalho">
-      <button class="cabecalho__menu">menu</button>
-      <img src="./assets/img/logo.svg" alt="Logotipo da HZC" class="cabecalho__logo">
-      <button class="cabecalho__noticacao">notificação</button>
+      <button class="cabecalho__menu" aria-label="Menu"><i></i></button>
+      <img
+        src="./assets/img/logo.svg"
+        alt="Logotipo da HZC"
+        class="cabecalho__logo"
+      />
+      <button class="cabecalho__notificacao" aria-label="Notificação">
+        <i></i>
+      </button>
     </header>
+    <nav class="menu-lateral">
+      <img src="./assets/img/logo.svg" alt="Logo da HZC" class="menu-lateral__logo"/>
+      <a href="#" class="menu-lateral__link">Início</a>
+      <a href="#" class="menu-lateral__link">Vídeos</a>
+      <a href="#" class="menu-lateral__link">Picos</a>
+      <a href="#" class="menu-lateral__link">Integrantes</a>
+      <a href="#" class="menu-lateral__link">Camisas</a>
+      <a href="#" class="menu-lateral__link">Pinturas</a>
+    </nav>
   </body>
 </html>
