--- a/index.html
+++ b/index.html
@@ -39,6 +39,22 @@
       <a href="#" class="menu-lateral__link menu-lateral__link--pinturas">Pinturas</a>
     </nav>
 
+    <main class="principal">
+      <h2 class="titulo-pagina">Início</h2>
+      <article class="cartao">
+        <img src="./assets/img/banner-mobile_1.png" alt="Banner do cartao" class="cartao__img">
+        <div class="cartao__conteudo">
+          <p class="cartao__destaque">Vídeo em destaque</p>
+          <h3 class="cartao__titulo">HZC - Título</h3>
+          <p class="cartao__perfil">Bruno Lopes</p>
+          <p class="cartao__info cartao__info--tempo">33 minutos</p>
+          <p class="cartao__info cartao__info--visualizacao">33 visualizações</p>
+          <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assistir agora</button>
+        </div>
+      </article>
+      <I></I>
+    </main>
+
     <script src="./assets/js/index.js"></script>
   </body>
 </html>
