--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap"
     />
 
-    <link rel="stylesheet" href="./assets/css/reset.css" />
-    <link rel="stylesheet" href="./assets/css/estilos.css" />
+    <link rel="stylesheet" href="assets/css/reset.css" />
+    <link rel="stylesheet" href="assets/css/estilos.css" />
   </head>
+
   <body>
     <header class="cabecalho">
       <button class="cabecalho__menu" aria-label="Menu"><i></i></button>
       <img
-        src="./assets/img/logo.svg"
+        src="assets/img/logo.svg"
         alt="Logotipo da HZC"
         class="cabecalho__logo"
       />
@@ -30,7 +31,7 @@
       </button>
     </header>
     <nav class="menu-lateral">
-      <img src="./assets/img/logo.svg" alt="Logo da HZC" class="menu-lateral__logo"/>
+      <img src="assets/img/logo.svg" alt="Logo da HZC" class="menu-lateral__logo"/>
       <a href="#" class="menu-lateral__link menu-lateral__link--inicio menu-lateral__link--ativo">Início</a>
       <a href="#" class="menu-lateral__link menu-lateral__link--videos">Vídeos</a>
       <a href="#" class="menu-lateral__link menu-lateral__link--picos">Picos</a>
@@ -41,8 +42,8 @@
 
     <main class="principal">
       <h2 class="titulo-pagina">Início</h2>
-      <article class="cartao">
-        <img src="./assets/img/banner-mobile_1.png" alt="Banner do cartao" class="cartao__img">
+      <article class="cartao cartao--destaque">
+        <img src="assets/img/banner-mobile_1.png" alt="Banner do cartao" class="cartao__img">
         <div class="cartao__conteudo">
           <p class="cartao__destaque">Vídeo em destaque</p>
           <h3 class="cartao__titulo">HZC - Título</h3>
@@ -52,9 +53,98 @@
           <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assistir agora</button>
         </div>
       </article>
-      <I></I>
+      <section class="secao">
+        <h3 class="titulo-secao">Vídeos mais vistos</h3>
+        <article class="cartao">
+          <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__img">
+          <div class="cartao__conteudo">
+            <p class="cartao__perfil">Bruno Lopes</p>
+            <h3 class="cartao__titulo">HZC - Título</h3>
+            <p class="cartao__info cartao__info--tempo">33 minutos</p>
+            <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+          </div>
+        </article>
+        <article class="cartao">
+          <img src="assets/img/video_2.png" alt="Vídeo" class="cartao__img">
+          <div class="cartao__conteudo">
+            <p class="cartao__perfil">Bruno Lopes</p>
+            <h3 class="cartao__titulo">HZC - Título</h3>
+            <p class="cartao__info cartao__info--tempo">33 minutos</p>
+            <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+          </div>
+        </article>
+        <article class="cartao">
+          <img src="assets/img/video_3.png" alt="Vídeo" class="cartao__img">
+          <div class="cartao__conteudo">
+            <p class="cartao__perfil">Bruno Lopes</p>
+            <h3 class="cartao__titulo">HZC - Título</h3>
+            <p class="cartao__info cartao__info--tempo">33 minutos</p>
+            <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+          </div>
+        </article>
+        <article class="cartao">
+          <img src="assets/img/video_4.png" alt="Vídeo" class="cartao__img">
+          <div class="cartao__conteudo">
+            <p class="cartao__perfil">Bruno Lopes</p>
+            <h3 class="cartao__titulo">HZC - Título</h3>
+            <p class="cartao__info cartao__info--tempo">33 minutos</p>
+            <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+          </div>
+        </article>
+      </section>
+
+      <article class="cartao cartao--destaque">
+        <img src="assets/img/banner-mobile_1.png" alt="Banner do cartao" class="cartao__img">
+        <div class="cartao__conteudo">
+          <p class="cartao__destaque">Vídeo em destaque</p>
+          <h3 class="cartao__titulo">HZC - Título</h3>
+          <p class="cartao__perfil">Bruno Lopes</p>
+          <p class="cartao__info cartao__info--tempo">33 minutos</p>
+          <p class="cartao__info cartao__info--visualizacao">33 visualizações</p>
+          <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assistir agora</button>
+        </div>
+      </article>
+      <section class="secao">
+        <h3 class="titulo-secao">Vídeos mais vistos</h3>
+        <article class="cartao">
+          <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__img">
+          <div class="cartao__conteudo">
+            <p class="cartao__perfil">Bruno Lopes</p>
+            <h3 class="cartao__titulo">HZC - Título</h3>
+            <p class="cartao__info cartao__info--tempo">33 minutos</p>
+            <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+          </div>
+        </article>
+        <article class="cartao">
+          <img src="assets/img/video_2.png" alt="Vídeo" class="cartao__img">
+          <div class="cartao__conteudo">
+            <p class="cartao__perfil">Bruno Lopes</p>
+            <h3 class="cartao__titulo">HZC - Título</h3>
+            <p class="cartao__info cartao__info--tempo">33 minutos</p>
+            <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+          </div>
+        </article>
+        <article class="cartao">
+          <img src="assets/img/video_3.png" alt="Vídeo" class="cartao__img">
+          <div class="cartao__conteudo">
+            <p class="cartao__perfil">Bruno Lopes</p>
+            <h3 class="cartao__titulo">HZC - Título</h3>
+            <p class="cartao__info cartao__info--tempo">33 minutos</p>
+            <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+          </div>
+        </article>
+        <article class="cartao">
+          <img src="assets/img/video_4.png" alt="Vídeo" class="cartao__img">
+          <div class="cartao__conteudo">
+            <p class="cartao__perfil">Bruno Lopes</p>
+            <h3 class="cartao__titulo">HZC - Título</h3>
+            <p class="cartao__info cartao__info--tempo">33 minutos</p>
+            <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+          </div>
+        </article>
+      </section>
     </main>
 
-    <script src="./assets/js/index.js"></script>
+    <script src="assets/js/index.js"></script>
   </body>
 </html>
