--- a/index.html
+++ b/index.html
@@ -42,14 +42,16 @@
 
     <main class="principal">
       <h2 class="titulo-pagina">Início</h2>
+      
+      <!--Vídeos-->
       <article class="cartao cartao--destaque">
         <img src="assets/img/banner-mobile_1.png" alt="Banner do cartao" class="cartao__img">
         <div class="cartao__conteudo">
           <p class="cartao__destaque">Vídeo em destaque</p>
-          <h3 class="cartao__titulo">HZC - Título</h3>
+          <h3 class="cartao__titulo">HZC - Life is... / 2021</h3>
           <p class="cartao__perfil">Bruno Lopes</p>
           <p class="cartao__info cartao__info--tempo">33 minutos</p>
-          <p class="cartao__info cartao__info--visualizacao">33 visualizações</p>
+          <p class="cartao__info cartao__info--visualizacao">53 visualizações</p>
           <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assistir agora</button>
         </div>
       </article>
@@ -58,8 +60,8 @@
         <article class="cartao">
           <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__img">
           <div class="cartao__conteudo">
-            <p class="cartao__perfil">Bruno Lopes</p>
-            <h3 class="cartao__titulo">HZC - Título</h3>
+            <p class="cartao__perfil">André Soares</p>
+            <h3 class="cartao__titulo">HZC - Tudo sem Padrin</h3>
             <p class="cartao__info cartao__info--tempo">33 minutos</p>
             <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
           </div>
@@ -68,7 +70,7 @@
           <img src="assets/img/video_2.png" alt="Vídeo" class="cartao__img">
           <div class="cartao__conteudo">
             <p class="cartao__perfil">Bruno Lopes</p>
-            <h3 class="cartao__titulo">HZC - Título</h3>
+            <h3 class="cartao__titulo">HZC - Enter The Fu-flez</h3>
             <p class="cartao__info cartao__info--tempo">33 minutos</p>
             <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
           </div>
@@ -76,8 +78,8 @@
         <article class="cartao">
           <img src="assets/img/video_3.png" alt="Vídeo" class="cartao__img">
           <div class="cartao__conteudo">
-            <p class="cartao__perfil">Bruno Lopes</p>
-            <h3 class="cartao__titulo">HZC - Título</h3>
+            <p class="cartao__perfil">Luiza Sampaio</p>
+            <h3 class="cartao__titulo">HZC - Vol.3</h3>
             <p class="cartao__info cartao__info--tempo">33 minutos</p>
             <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
           </div>
@@ -86,60 +88,61 @@
           <img src="assets/img/video_4.png" alt="Vídeo" class="cartao__img">
           <div class="cartao__conteudo">
             <p class="cartao__perfil">Bruno Lopes</p>
-            <h3 class="cartao__titulo">HZC - Título</h3>
+            <h3 class="cartao__titulo">HZC - Love Machine</h3>
             <p class="cartao__info cartao__info--tempo">33 minutos</p>
             <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
           </div>
         </article>
       </section>
 
+      <!-- Camisetas -->
       <article class="cartao cartao--destaque">
-        <img src="assets/img/banner-mobile_1.png" alt="Banner do cartao" class="cartao__img">
+        <img src="assets/img/banner-mobile_2.png" alt="Banner do cartao" class="cartao__img">
         <div class="cartao__conteudo">
-          <p class="cartao__destaque">Vídeo em destaque</p>
-          <h3 class="cartao__titulo">HZC - Título</h3>
+          <p class="cartao__destaque">Nova arte</p>
+          <h3 class="cartao__titulo">Only Zikas - Lagoa Dompa Club</h3>
           <p class="cartao__perfil">Bruno Lopes</p>
-          <p class="cartao__info cartao__info--tempo">33 minutos</p>
+          <p class="cartao__info cartao__info--preco">33,33</p>
           <p class="cartao__info cartao__info--visualizacao">33 visualizações</p>
-          <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assistir agora</button>
+          <button class="cartao__botao cartao__botao--compra cartao__botao--destaque">Comprar agora</button>
         </div>
       </article>
       <section class="secao">
-        <h3 class="titulo-secao">Vídeos mais vistos</h3>
+        <h3 class="titulo-secao">Camisas mais recentes</h3>
         <article class="cartao">
-          <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__img">
+          <img src="assets/img/produto_1.png"" alt="camisas" class="cartao__img">
           <div class="cartao__conteudo">
-            <p class="cartao__perfil">Bruno Lopes</p>
-            <h3 class="cartao__titulo">HZC - Título</h3>
-            <p class="cartao__info cartao__info--tempo">33 minutos</p>
-            <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+            <p class="cartao__perfil">André Soares</p>
+            <h3 class="cartao__titulo">IBM</h3>
+            <p class="cartao__info cartao__info--preco">33,33</p>
+            <button class="cartao__botao cartao__botao--compra" aria-label="Comprar agora"></button>
           </div>
         </article>
         <article class="cartao">
-          <img src="assets/img/video_2.png" alt="Vídeo" class="cartao__img">
+          <img src="assets/img/produto_2.png"" alt="camisas" class="cartao__img">
           <div class="cartao__conteudo">
             <p class="cartao__perfil">Bruno Lopes</p>
-            <h3 class="cartao__titulo">HZC - Título</h3>
-            <p class="cartao__info cartao__info--tempo">33 minutos</p>
-            <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+            <h3 class="cartao__titulo">Huflez Crew Philosophy Club</h3>
+            <p class="cartao__info cartao__info--preco">33,33</p>
+            <button class="cartao__botao cartao__botao--compra" aria-label="Comprar agora"></button>
           </div>
         </article>
         <article class="cartao">
-          <img src="assets/img/video_3.png" alt="Vídeo" class="cartao__img">
+          <img src="assets/img/produto_3.png"" alt="camisas" class="cartao__img">
           <div class="cartao__conteudo">
-            <p class="cartao__perfil">Bruno Lopes</p>
-            <h3 class="cartao__titulo">HZC - Título</h3>
-            <p class="cartao__info cartao__info--tempo">33 minutos</p>
-            <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+            <p class="cartao__perfil">Luiza Sampaio</p>
+            <h3 class="cartao__titulo">Corujita noturna</h3>
+            <p class="cartao__info cartao__info--preco">33,33</p>
+            <button class="cartao__botao cartao__botao--compra" aria-label="Comprar agora"></button>
           </div>
         </article>
         <article class="cartao">
-          <img src="assets/img/video_4.png" alt="Vídeo" class="cartao__img">
+          <img src="assets/img/produto_4.png"" alt="camisas" class="cartao__img">
           <div class="cartao__conteudo">
             <p class="cartao__perfil">Bruno Lopes</p>
-            <h3 class="cartao__titulo">HZC - Título</h3>
-            <p class="cartao__info cartao__info--tempo">33 minutos</p>
-            <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+            <h3 class="cartao__titulo">GGG - Gatin G Gorro</h3>
+            <p class="cartao__info cartao__info--preco">33,33</p>
+            <button class="cartao__botao cartao__botao--compra" aria-label="Comprar agora"></button>
           </div>
         </article>
       </section>
