--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
   </head>
 
   <body>
+    <!-- Cabeçalho -->
     <header class="cabecalho">
       <button class="cabecalho__menu" aria-label="Menu"><i></i></button>
-      <img
-        src="assets/img/logo.svg"
-        alt="Logotipo da HZC"
-        class="cabecalho__logo"
-      />
+      <img src="assets/img/logo.svg" alt="Logotipo da HZC" class="cabecalho__logo" />
+      <p class="cabecalho__perfil">Bruno Lopes</p>
       <button class="cabecalho__notificacao" aria-label="Notificação">
         <i></i>
       </button>
     </header>
+
+    <!-- Menu lateral -->
     <nav class="menu-lateral">
       <img src="assets/img/logo.svg" alt="Logo da HZC" class="menu-lateral__logo"/>
       <a href="#" class="menu-lateral__link menu-lateral__link--inicio menu-lateral__link--ativo">Início</a>
@@ -43,7 +43,7 @@
     <main class="principal">
       <h2 class="titulo-pagina">Início</h2>
       
-      <!--Vídeos-->
+      <!-- Vídeos -->
       <article class="cartao cartao--destaque">
         <img src="assets/img/banner-mobile_1.png" alt="Banner do cartao" class="cartao__img">
         <div class="cartao__conteudo">
@@ -54,6 +54,37 @@
           <p class="cartao__info cartao__info--visualizacao">53 visualizações</p>
           <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assistir agora</button>
         </div>
+      </article>
+      <article class="cartao cartao--recentes">
+        <h3 class="cartao__titulo">Videos recentes</h3>
+        <a href="#" class="cartao__link">Vert todos</a>
+        <ul class="cartao__lista">
+          <li class="cartao__item">
+            <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+            <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+            <p class="cartao__item-perfil">Bruno Lopes</p>
+          </li>
+          <li class="cartao__item">
+            <img src="assets/img/miniatura_2.png" alt="Thumbnail" class="cartao__item-thumbnail">
+            <h4 class="cartao__item-titulo">HZC - Vol.3</h4>
+            <p class="cartao__item-perfil">Júlia Fonseca</p>
+          </li>
+          <li class="cartao__item">
+            <img src="assets/img/miniatura_3.png" alt="Thumbnail" class="cartao__item-thumbnail">
+            <h4 class="cartao__item-titulo">HZC - Pescaria na Urca</h4>
+            <p class="cartao__item-perfil">Júlia	Fonseca</p>
+          </li>
+          <li class="cartao__item">
+            <img src="assets/img/miniatura_4.png" alt="Thumbnail" class="cartao__item-thumbnail">
+            <h4 class="cartao__item-titulo">Vidalocagi - Guerreiros do Asfalto</h4>
+            <p class="cartao__item-perfil">Júlia Fonseca</p>
+          </li>
+          <li class="cartao__item">
+            <img src="assets/img/miniatura_5.png" alt="Thumbnail" class="cartao__item-thumbnail">
+            <h4 class="cartao__item-titulo">Vidalocagi - Não importa o nível</h4>
+            <p class="cartao__item-perfil">Júlia Fonseca</p>
+          </li>
+        </ul>
       </article>
       <section class="secao">
         <h3 class="titulo-secao">Vídeos mais vistos</h3>
@@ -96,6 +127,37 @@
       </section>
 
       <!-- Camisetas -->
+      <article class="cartao cartao--recentes">
+        <h3 class="cartao__titulo">Videos recentes</h3>
+        <a href="#" class="cartao__link">Vert todos</a>
+        <ul class="cartao__lista">
+          <li class="cartao__item">
+            <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+            <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+            <p class="cartao__item-perfil">Bruno Lopes</p>
+          </li>
+          <li class="cartao__item">
+            <img src="assets/img/miniatura_2.png" alt="Thumbnail" class="cartao__item-thumbnail">
+            <h4 class="cartao__item-titulo">HZC - Vol.3</h4>
+            <p class="cartao__item-perfil">Júlia Fonseca</p>
+          </li>
+          <li class="cartao__item">
+            <img src="assets/img/miniatura_3.png" alt="Thumbnail" class="cartao__item-thumbnail">
+            <h4 class="cartao__item-titulo">HZC - Pescaria na Urca</h4>
+            <p class="cartao__item-perfil">Júlia	Fonseca</p>
+          </li>
+          <li class="cartao__item">
+            <img src="assets/img/miniatura_4.png" alt="Thumbnail" class="cartao__item-thumbnail">
+            <h4 class="cartao__item-titulo">Vidalocagi - Guerreiros do Asfalto</h4>
+            <p class="cartao__item-perfil">Júlia Fonseca</p>
+          </li>
+          <li class="cartao__item">
+            <img src="assets/img/miniatura_5.png" alt="Thumbnail" class="cartao__item-thumbnail">
+            <h4 class="cartao__item-titulo">Vidalocagi - Não importa o nível</h4>
+            <p class="cartao__item-perfil">Júlia Fonseca</p>
+          </li>
+        </ul>
+      </article>
       <article class="cartao cartao--destaque">
         <img src="assets/img/banner-mobile_2.png" alt="Banner do cartao" class="cartao__img">
         <div class="cartao__conteudo">
